--- a/src/views/LogIn.fxml
+++ b/src/views/LogIn.fxml
@@ -1,57 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.shape.*?>
 <?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+         prefWidth="900.0" tabClosingPolicy="UNAVAILABLE" xmlns:fx="http://javafx.com/fxml/1"
+         xmlns="http://javafx.com/javafx/8" fx:controller="controllers.LogInController">
+    <tabs>
+        <Tab text="Login" style="-fx-padding: 1 -1 -1 4;-fx-pref-width: 400">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="400.0">
+                    <children>
+                        <GridPane layoutX="180.0" layoutY="95.0" prefHeight="162.0" prefWidth="240.0">
+                            <children>
+                                <JFXPasswordField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="password"/>
+                                <JFXTextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="username"/>
+                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Username:"
+                                       GridPane.rowIndex="1">
+                                    <font>
+                                        <Font size="16.0"/>
+                                    </font>
+                                </Label>
+                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Password:"
+                                       GridPane.rowIndex="3">
+                                    <font>
+                                        <Font size="16.0"/>
+                                    </font>
+                                </Label>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LogInController">
-   <children>
-      <GridPane layoutX="180.0" layoutY="78.0" prefHeight="131.0" prefWidth="240.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0" prefWidth="122.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="121.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <JFXPasswordField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <JFXTextField GridPane.columnIndex="1" />
-            <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Username:">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-            <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Password:" GridPane.rowIndex="1">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Label>
-         </children>
-      </GridPane>
-      <Label layoutX="13.0" layoutY="14.0" prefHeight="64.0" prefWidth="574.0" text="Log in to your account" textFill="#f6ae00">
-         <font>
-            <Font name="Roboto Medium" size="53.0" />
-         </font>
-      </Label>
-      <Label layoutX="141.0" layoutY="267.0" text="Dont have an account. Sign Up now. Its Free!" textFill="#616161">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <JFXButton layoutX="241.0" layoutY="296.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#open_SignUp" prefHeight="37.0" prefWidth="119.0" ripplerFill="WHITE" style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Sign Up">
-         <font>
-            <Font name="Roboto Condensed Bold" size="16.0" />
-         </font>
-      </JFXButton>
-      <JFXButton layoutX="241.0" layoutY="209.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="37.0" prefWidth="119.0" ripplerFill="WHITE" style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Log In">
-         <font>
-            <Font name="Roboto Condensed Bold" size="16.0" />
-         </font>
-      </JFXButton>
-   </children>
-</Pane>
+                            </children>
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0"
+                                                   prefWidth="122.0"/>
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0"
+                                                   prefWidth="121.0"/>
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                            </rowConstraints>
+                        </GridPane>
+                        <JFXButton layoutX="256.0" layoutY="290.0" maxHeight="-Infinity" maxWidth="-Infinity"
+                                   minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="119.0"
+                                   ripplerFill="WHITE"
+                                   style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Login"
+                                   onMouseClicked="#clicked_Login">
+                            <font>
+                                <Font name="Roboto Condensed Bold" size="13.0"/>
+                            </font>
+                        </JFXButton>
+                    </children>
+                </AnchorPane>
+            </content>
+        </Tab>
+    </tabs>
+</TabPane>
