--- a/src/views/MainUi.fxml
+++ b/src/views/MainUi.fxml
@@ -63,7 +63,7 @@
       <Pane fx:id="contentArea" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="390.0" prefWidth="826.0" BorderPane.alignment="CENTER" />
    </center>
    <top>
-      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="52.0" prefWidth="1051.0" style="-fx-background-color: ;">
+      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="52.0" prefWidth="1051.0" >
          <children>
             <GridPane layoutY="22.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="14.0" prefWidth="1051.0">
               <columnConstraints>
