--- a/src/views/SignUp.fxml
+++ b/src/views/SignUp.fxml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SignUpController">
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SignUpController">
     <tabs>
         <Tab style="-fx-padding: 1 -1 -1 4;-fx-pref-width: 250" text="Individual">
             <content>
@@ -24,8 +20,8 @@
                     <children>
                         <GridPane layoutX="180.0" layoutY="95.0" prefHeight="162.0" prefWidth="240.0">
                             <children>
-                                <JFXPasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                                <JFXTextField fx:id="username" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <JFXTextField fx:id="firstname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <JFXTextField fx:id="lastname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                 <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Username:" GridPane.rowIndex="3">
                                     <font>
                                         <Font size="16.0" />
@@ -46,8 +42,8 @@
                                         <Font size="16.0" />
                                     </font>
                                 </Label>
-                                <JFXTextField fx:id="lastname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                <JFXTextField fx:id="firstname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <JFXTextField fx:id="username" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <JFXPasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                             </children>
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0" prefWidth="122.0" />
@@ -67,7 +63,7 @@
                                 <Font name="Roboto Condensed Bold" size="13.0" />
                             </font>
                         </JFXButton>
-                  <Label fx:id="errorlabel" alignment="CENTER" layoutX="540.0" layoutY="127.0" prefHeight="98.0" prefWidth="200.0" text="" textFill="RED">
+                  <Label fx:id="errorlabel" alignment="CENTER" layoutX="500.0" layoutY="127.0" prefHeight="98.0" prefWidth="260.0" text="" textFill="RED">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -82,9 +78,20 @@
                     <children>
                         <GridPane layoutX="164.0" layoutY="103.0" prefHeight="161.0" prefWidth="302.0">
                             <children>
-                                <JFXPasswordField GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                                <JFXTextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Username:" GridPane.rowIndex="3">
+                                <JFXTextField fx:id="businessname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <JFXTextField fx:id="bfirstname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <JFXTextField fx:id="blastname" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="Buisness Name:" GridPane.rowIndex="1">
+                                    <font>
+                                        <Font size="16.0" />
+                                    </font>
+                                </Label>
+                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="First Name:" GridPane.rowIndex="2">
+                                    <font>
+                                        <Font size="16.0" />
+                                    </font>
+                                </Label>
+                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="Last Name:" GridPane.rowIndex="3">
                                     <font>
                                         <Font size="16.0" />
                                     </font>
@@ -94,18 +101,7 @@
                                         <Font size="16.0" />
                                     </font>
                                 </Label>
-                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="ETC ETC" GridPane.rowIndex="2">
-                                    <font>
-                                        <Font size="16.0" />
-                                    </font>
-                                </Label>
-                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="Buisness Name:" GridPane.rowIndex="1">
-                                    <font>
-                                        <Font size="16.0" />
-                                    </font>
-                                </Label>
-                                <JFXTextField GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                <JFXTextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <JFXPasswordField fx:id="bpassword" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                             </children>
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.0" minWidth="10.0" prefWidth="127.0" />
@@ -125,7 +121,7 @@
                                 <Font name="Roboto Condensed Bold" size="13.0" />
                             </font>
                         </JFXButton>
-                        <Label fx:id="errorlabel2" alignment="CENTER" layoutX="595.0" layoutY="127.0" prefHeight="98.0" prefWidth="170.0" text="" textFill="RED">
+                        <Label fx:id="errorlabel2" alignment="CENTER" layoutX="499.0" layoutY="127.0" prefHeight="98.0" prefWidth="363.0" text="" textFill="RED">
                             <font>
                                 <Font size="18.0" />
                             </font>
