--- a/src/views/SignUp.fxml
+++ b/src/views/SignUp.fxml
@@ -130,5 +130,63 @@
                 </AnchorPane>
             </content>
         </Tab>
+        <Tab style="-fx-padding: 1 -1 -1 4;-fx-pref-width: 250" text="Driver">
+            <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                    <children>
+                        <GridPane layoutX="164.0" layoutY="103.0" prefHeight="161.0" prefWidth="302.0">
+                            <children>
+                                <JFXTextField fx:id="dusinessname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <JFXTextField fx:id="dfirstname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <JFXTextField fx:id="dlastname" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="User name:" GridPane.rowIndex="1">
+                                    <font>
+                                        <Font size="16.0" />
+                                    </font>
+                                </Label>
+                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="First Name:" GridPane.rowIndex="2">
+                                    <font>
+                                        <Font size="16.0" />
+                                    </font>
+                                </Label>
+                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="Last Name:" GridPane.rowIndex="3">
+                                    <font>
+                                        <Font size="16.0" />
+                                    </font>
+                                </Label>
+                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Password:" GridPane.rowIndex="4">
+                                    <font>
+                                        <Font size="16.0" />
+                                    </font>
+                                </Label>
+                                <JFXPasswordField fx:id="dpassword" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                            </children>
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.0" minWidth="10.0" prefWidth="127.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="134.0" />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            </rowConstraints>
+                        </GridPane>
+                        <JFXButton layoutX="256.0" layoutY="290.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clicked_SignUpDri" prefHeight="30.0" prefWidth="119.0" ripplerFill="WHITE" style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Sign Up">
+                            <font>
+                                <Font name="Roboto Condensed Bold" size="13.0" />
+                            </font>
+                        </JFXButton>
+                        <Label fx:id="errorlabel3" alignment="CENTER" layoutX="499.0" layoutY="127.0" prefHeight="98.0" prefWidth="363.0" text="" textFill="RED">
+                            <font>
+                                <Font size="15.0" />
+                            </font>
+                        </Label>
+                    </children>
+                </AnchorPane>
+            </content>
+        </Tab>
     </tabs>
 </TabPane>
