--- a/src/views/EatIn.fxml
+++ b/src/views/EatIn.fxml
@@ -1,141 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-
-<Pane fx:id="pane" prefHeight="360.0" prefWidth="826.0" style="-fx-background-color: #F0F0F0;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EatInController">
-   <children>
-      <Pane layoutX="64.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="318.0" prefWidth="226.0" style="-fx-background-color: #F0F0F0;">
-         <children>
-            <Label alignment="CENTER" layoutY="7.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="226.0" text="KFC" textFill="#514f4f">
-               <font>
-                  <Font name="Roboto Condensed Bold" size="20.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="184.0" fitWidth="226.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/Burger_small.png" />
-               </image>
-               <effect>
-                  <DropShadow color="#ebebeb" />
-               </effect>
-            </ImageView>
-            <Label layoutX="5.0" layoutY="222.0" prefHeight="20.0" prefWidth="226.0" text="Lorem ipsum is a dummy text" textFill="#616161">
-               <font>
-                  <Font name="Roboto Light" size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="5.0" layoutY="242.0" prefHeight="20.0" prefWidth="226.0" text="used as a placeholder." textFill="#616161">
-               <font>
-                  <Font name="Roboto Light" size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="7.0" layoutY="274.0" text="\$19" textFill="#1ea362">
-               <font>
-                  <Font name="Roboto Medium" size="25.0" />
-               </font>
-            </Label>
-            <JFXButton layoutX="102.0" layoutY="275.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#openRestaurant" prefHeight="30.0" prefWidth="119.0" ripplerFill="WHITE" style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Read More">
-               <font>
-                  <Font name="Roboto Condensed Bold" size="16.0" />
-               </font>
-            </JFXButton>
-         </children>
-         <effect>
-            <DropShadow color="#d3cdcd" />
-         </effect>
-      </Pane>
-      <Pane layoutX="300.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="318.0" prefWidth="226.0" style="-fx-background-color: #F0F0F0;">
-         <children>
-            <Label alignment="CENTER" layoutY="7.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="226.0" text="Nandos" textFill="#514f4f">
-               <font>
-                  <Font name="Roboto Condensed Bold" size="20.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="184.0" fitWidth="226.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/cake.png" />
-               </image>
-               <effect>
-                  <DropShadow color="#ebebeb" />
-               </effect>
-            </ImageView>
-            <Label layoutX="5.0" layoutY="222.0" prefHeight="20.0" prefWidth="226.0" text="Lorem ipsum is a dummy text" textFill="#616161">
-               <font>
-                  <Font name="Roboto Light" size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="5.0" layoutY="242.0" prefHeight="20.0" prefWidth="226.0" text="used as a placeholder." textFill="#616161">
-               <font>
-                  <Font name="Roboto Light" size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="7.0" layoutY="274.0" text="\$25" textFill="#1ea362">
-               <font>
-                  <Font name="Roboto Medium" size="25.0" />
-               </font>
-            </Label>
-            <JFXButton layoutX="102.0" layoutY="275.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#openRestaurant" prefHeight="30.0" prefWidth="119.0" ripplerFill="WHITE" style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Read More">
-               <font>
-                  <Font name="Roboto Condensed Bold" size="16.0" />
-               </font>
-            </JFXButton>
-         </children>
-         <effect>
-            <DropShadow color="#d3cdcd" />
-         </effect>
-      </Pane>
-      <Pane layoutX="536.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="318.0" prefWidth="226.0" style="-fx-background-color: #F0F0F0;">
-         <children>
-            <Label alignment="CENTER" layoutY="6.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="226.0" text="Dominos" textFill="#514f4f">
-               <font>
-                  <Font name="Roboto Condensed Bold" size="20.0" />
-               </font>
-            </Label>
-            <ImageView fitHeight="184.0" fitWidth="226.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../icons/pizza_big.png" />
-               </image>
-               <effect>
-                  <DropShadow color="#ebebeb" />
-               </effect>
-            </ImageView>
-            <Label layoutX="5.0" layoutY="222.0" prefHeight="20.0" prefWidth="226.0" text="Lorem ipsum is a dummy text" textFill="#616161">
-               <font>
-                  <Font name="Roboto Light" size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="5.0" layoutY="242.0" prefHeight="20.0" prefWidth="226.0" text="used as a placeholder." textFill="#616161">
-               <font>
-                  <Font name="Roboto Light" size="16.0" />
-               </font>
-            </Label>
-            <Label layoutX="7.0" layoutY="274.0" text="\$35" textFill="#1ea362">
-               <font>
-                  <Font name="Roboto Medium" size="25.0" />
-               </font>
-            </Label>
-            <JFXButton layoutX="102.0" layoutY="275.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#openRestaurant" onMouseClicked="#testMe" prefHeight="30.0" prefWidth="119.0" ripplerFill="WHITE" style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Read More">
-               <font>
-                  <Font name="Roboto Condensed Bold" size="16.0" />
-               </font>
-            </JFXButton>
-         </children>
-         <effect>
-            <DropShadow color="#d3cdcd" />
-         </effect>
-      </Pane>
-   </children>
-</Pane>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.HBox?>
+<ScrollPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="390.0" prefWidth="826.0" vbarPolicy="NEVER"
+            xmlns="http://javafx.com/javafx/8" fx:controller="controllers.EatInController">
+    <content>
+        <HBox fx:id="pane" prefHeight="390.0" prefWidth="826.0"/>
+    </content>
+</ScrollPane>
