--- a/src/views/SignUp.fxml
+++ b/src/views/SignUp.fxml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXPasswordField?>
-<?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-
-<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="900.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SignUpController">
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<TabPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+         minWidth="-Infinity" prefHeight="400.0" prefWidth="873.0" tabClosingPolicy="UNAVAILABLE"
+         xmlns="http://javafx.com/javafx/8" fx:controller="controllers.SignUpController">
     <tabs>
         <Tab style="-fx-padding: 1 -1 -1 4;-fx-pref-width: 250" text="Individual">
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="400.0">
                     <children>
-                        <GridPane layoutX="180.0" layoutY="95.0" prefHeight="162.0" prefWidth="240.0">
+                        <GridPane layoutX="124.0" layoutY="48.0" prefHeight="247.0" prefWidth="265.0">
                             <children>
                                 <JFXTextField fx:id="firstname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                 <JFXTextField fx:id="lastname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
@@ -44,6 +38,27 @@
                                 </Label>
                                 <JFXTextField fx:id="username" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                 <JFXPasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="DoorNo"
+                                       GridPane.rowIndex="6">
+                                    <font>
+                                        <Font size="16.0"/>
+                                    </font>
+                                </Label>
+                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Street"
+                                       GridPane.rowIndex="7">
+                                    <font>
+                                        <Font size="16.0"/>
+                                    </font>
+                                </Label>
+                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Postcode"
+                                       GridPane.rowIndex="8">
+                                    <font>
+                                        <Font size="16.0"/>
+                                    </font>
+                                </Label>
+                                <JFXPasswordField fx:id="udoor" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+                                <JFXPasswordField fx:id="ustreet" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
+                                <JFXPasswordField fx:id="upostcode" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
                             </children>
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="126.0" minWidth="10.0" prefWidth="122.0" />
@@ -56,14 +71,21 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                             </rowConstraints>
                         </GridPane>
-                        <JFXButton layoutX="256.0" layoutY="290.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clicked_SignUpInd" prefHeight="30.0" prefWidth="119.0" ripplerFill="WHITE" style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Sign Up">
+                        <JFXButton layoutX="197.0" layoutY="311.0" maxHeight="-Infinity" maxWidth="-Infinity"
+                                   minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clicked_SignUpInd"
+                                   prefHeight="30.0" prefWidth="119.0" ripplerFill="WHITE"
+                                   style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Sign Up">
                             <font>
                                 <Font name="Roboto Condensed Bold" size="13.0" />
                             </font>
                         </JFXButton>
-                  <Label fx:id="errorlabel" alignment="CENTER" layoutX="500.0" layoutY="127.0" prefHeight="98.0" prefWidth="260.0" text="" textFill="RED">
+                        <Label fx:id="errorlabel" alignment="CENTER" layoutX="450.0" layoutY="55.0" prefHeight="270.0"
+                               prefWidth="438.0" text="" textFill="RED">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -76,56 +98,74 @@
             <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                     <children>
-                        <GridPane layoutX="164.0" layoutY="103.0" prefHeight="161.0" prefWidth="302.0">
+                        <GridPane layoutX="73.0" layoutY="50.0" prefHeight="253.0" prefWidth="367.0">
                             <children>
                                 <JFXTextField fx:id="businessname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                <JFXTextField fx:id="bfirstname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                <JFXTextField fx:id="blastname" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <JFXTextField fx:id="busername" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                                 <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="Buisness Name:" GridPane.rowIndex="1">
                                     <font>
                                         <Font size="16.0" />
                                     </font>
                                 </Label>
-                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="First Name:" GridPane.rowIndex="2">
+                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="Username"
+                                       GridPane.rowIndex="2">
                                     <font>
                                         <Font size="16.0" />
                                     </font>
                                 </Label>
-                                <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="Last Name:" GridPane.rowIndex="3">
+                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Password:"
+                                       GridPane.rowIndex="3">
                                     <font>
                                         <Font size="16.0" />
                                     </font>
                                 </Label>
-                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Password:" GridPane.rowIndex="4">
+                                <JFXPasswordField fx:id="bpassword" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                                <JFXPasswordField fx:id="bstreet" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+                                <JFXPasswordField fx:id="bpostcode" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="Street"
+                                       GridPane.rowIndex="5">
                                     <font>
-                                        <Font size="16.0" />
+                                        <Font size="16.0"/>
                                     </font>
                                 </Label>
-                                <JFXPasswordField fx:id="bpassword" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <Label contentDisplay="RIGHT" prefHeight="17.0" prefWidth="94.0" text="PostCode"
+                                       GridPane.rowIndex="6">
+                                    <font>
+                                        <Font size="16.0"/>
+                                    </font>
+                                </Label>
                             </children>
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="143.0" minWidth="10.0" prefWidth="127.0" />
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="134.0" />
                             </columnConstraints>
                             <rowConstraints>
-                                <RowConstraints />
+                                <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0"/>
+                                <RowConstraints maxHeight="33.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES"/>
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                             </rowConstraints>
                         </GridPane>
-                        <JFXButton layoutX="256.0" layoutY="290.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clicked_SignUpBus" prefHeight="30.0" prefWidth="119.0" ripplerFill="WHITE" style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Sign Up">
+                        <JFXButton layoutX="592.0" layoutY="273.0" maxHeight="-Infinity" maxWidth="-Infinity"
+                                   minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clicked_SignUpBus"
+                                   prefHeight="30.0" prefWidth="119.0" ripplerFill="WHITE"
+                                   style="-fx-background-color: #DACE00; -fx-background-radius: 0px;" text="Sign Up">
                             <font>
                                 <Font name="Roboto Condensed Bold" size="13.0" />
                             </font>
                         </JFXButton>
-                        <Label fx:id="errorlabel2" alignment="CENTER" layoutX="499.0" layoutY="127.0" prefHeight="98.0" prefWidth="363.0" text="" textFill="RED">
+                        <Label fx:id="errorlabel2" alignment="CENTER" layoutX="391.0" layoutY="14.0" prefHeight="98.0"
+                               prefWidth="492.0" text="" textFill="RED">
                             <font>
                                 <Font size="15.0" />
                             </font>
                         </Label>
+                        <JFXTextArea fx:id="bdescription" layoutX="451.0" layoutY="112.0" maxWidth="402.0"
+                                     minWidth="402.0" prefHeight="109.0" prefWidth="402.0"
+                                     promptText="Please enter a description of your buisness."/>
                     </children>
                 </AnchorPane>
             </content>
@@ -136,7 +176,7 @@
                     <children>
                         <GridPane layoutX="164.0" layoutY="103.0" prefHeight="161.0" prefWidth="302.0">
                             <children>
-                                <JFXTextField fx:id="dusinessname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <JFXTextField fx:id="dusername" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                                 <JFXTextField fx:id="dfirstname" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                 <JFXTextField fx:id="dlastname" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                 <Label contentDisplay="RIGHT" prefHeight="20.0" prefWidth="125.0" text="User name:" GridPane.rowIndex="1">
@@ -179,7 +219,8 @@
                                 <Font name="Roboto Condensed Bold" size="13.0" />
                             </font>
                         </JFXButton>
-                        <Label fx:id="errorlabel3" alignment="CENTER" layoutX="499.0" layoutY="127.0" prefHeight="98.0" prefWidth="363.0" text="" textFill="RED">
+                        <Label fx:id="errorlabel3" alignment="CENTER" layoutX="499.0" layoutY="127.0" prefHeight="193.0"
+                               prefWidth="363.0" text="" textFill="RED">
                             <font>
                                 <Font size="15.0" />
                             </font>
